提供滚动升级API
Commit by Andy.Zhang
Email: ztao8607@gmail.com
