# swagger.json
@@ -706,6 +706,49 @@
         }
       }
     },
+    "/cloud/svc/rolling": {
+      "post": {
+        "tags": [
+          "svc"
+        ],
+        "summary": "进行滚动升级(蓝绿/金丝雀)",
+        "description": "对未升级的实例按照给定的比例进行升级",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "svcname",
+            "required": true,
+            "description": "服务配置名称",
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "namespace",
+            "required": false,
+            "description": "命名空间名称,为空则取默认值",
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "percent",
+            "required": false,
+            "description": "升级百分比",
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "操作成功"
+          },
+          "500": {
+            "description": "操作失败"
+          }
+        }
+      }
+    },
     "/cluod/svc/group/add": {
       "post": {
         "tags": [
@@ -1386,9 +1429,9 @@
         }
       }
     },
-    "/cloud/container/check":{
-      "post":{
-        "tags":[
+    "/cloud/container/check": {
+      "post": {
+        "tags": [
           "container"
         ],
         "summary": "检查容器配置数据是否存在",
@@ -1944,22 +1987,22 @@
           "type": "string",
           "description": "当前部署状态 ready-等待部署 normal-部署成功 updating-部署中 rolling-蓝绿发布进行中 failed-部署失败"
         },
-        "lb_ip":{
+        "lb_ip": {
           "type": "string",
           "description": "服务负载均衡IP"
         },
-        "lb_port":{
-          "type":"array",
+        "lb_port": {
+          "type": "array",
           "description": "服务负载均衡监听端口",
           "items": {
-            "type":"number"
+            "type": "number"
           }
         },
-        "replicas":{
+        "replicas": {
           "type": "number",
           "description": "实例个数"
         },
-        "msg":{
+        "msg": {
           "type": "string",
           "description": "错误消息"
         }
